# python-payment-service

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  data.txt  main.py  pyproject.toml
client/: index.html
migrations/: env.py
migrations/versions/: cc799fae6940_initial.py
models/: models.py
routes/: routes.py
